--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -35,19 +35,23 @@ block content
       select.select(name='sub')
         if (sel==1)
           option(value='Schemes' selected) Schemes
-        else ()
+        else
+
           option(value='Schemes') Schemes
         if (sel==2)
           option(value='Party' selected) Party
-        else ()
+        else
+          
           option(value='Party') Party
         if (sel==3)
           option(value='Tech' selected) Tech
-        else ()
+        else
+
           option(value='Tech') Tech
         if (sel==4)
           option(value='Videogames' selected) Videogames
-        else ()
+        else
+
           option(value='Videogames') Videogames
     div
       button(type='submit') Express yourself
