--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -96,6 +96,12 @@ a{
   background: rgb(244, 139, 194);
 }
 
+.fillMenu {
+  background: rgb(250, 180, 135);
+  width: 100%;
+  height: 3.5em;
+}
+
 button {
   padding: 0px;
 }
