--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -96,9 +96,9 @@ a{
   background: rgb(244, 139, 194);
 }
 
-.fillMenu {
+.menuFill {
   background: rgb(250, 180, 135);
-  margin-left: 40em;
+  /*margin-left: 40em;*/
   width: 100%;
   height: 3.5em;
 }
