--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,5 +57,18 @@ block content
 
   br
 
-  p= Pnum
-  p= page
+    -n=0
+    nav
+      while n < Pnum
+        -x = n + 1
+        -id = '/threadid=' + JSON.stringify(thread.id)
+        -id = id + '&page=' + n
+        if n == page
+          li
+            p= page + 1
+        else
+
+          li
+            a(href=(id))= x
+        -n = n + 1
+    br
