--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -61,8 +61,7 @@ block content
   nav
     while n < Pnum
       -x = n + 1
-      -id = '/threadid=' + JSON.stringify(thread.id)
-      -id = id + '&page=' + n
+      -id = '/page=' + n
       if n == page
         li
           p= page + 1
