Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -62,7 +62,7 @@ block content
     while n < Pnum
       -x = n + 1
       -id = '/page=' + n
-      if n == page
+      if n == page - 1
         li
           p= page + 1
       else
