--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -64,7 +64,7 @@ block content
       -id = '/page=' + n
       if n == page - 1
         li
-          p= page + 1
+          p= page
       else
 
         li
