Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,7 +53,7 @@ block content
               a(href=id)= thread.title
             td= thread.comnum
             td= thread.views
-            td= thread.mdate
+            td= thread.mdate + 1
 
   br
 
