--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,7 +53,9 @@ block content
               a(href=id)= thread.title
             td= thread.comnum
             td= thread.views
-            td= thread.mdate + 1
+            script(type='text/javascript').
+              const x = thread.mdate;
+            td= thread.mdate
 
   br
 
