Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,7 +57,7 @@ block content
               const x = thread.mdate;
               const re = /[+]/;
               let mdate = x.split(re);
-              mdate = mdate[0]
+              mdate = mdate[0];
             td= mdate
 
   br
