--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,11 +53,12 @@ block content
               a(href=id)= thread.title
             td= thread.comnum
             td= thread.views
-            script(type='text/javascript').
-              const x = thread.mdate;
-              const re = /[+]/;
-              let mdate = x.split(re);
-              mdate = mdate[0];
+            script
+              :cdata-js:babel(presets=['es2015'])
+                const x = thread.mdate;
+                const re = /[+]/;
+                let mdate = x.split(re);
+                mdate = mdate[0];
             td= mdate
 
   br
