--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,15 +53,8 @@ block content
               a(href=id)= thread.title
             td= thread.comnum
             td= thread.views
-            //- logum date-id adeins til.
-            script.
-              "use strict";
-              
-              var x = thread.mdate;
-              var re = /[x]/;
-              var mdate = x.split(re);
-              mdate = mdate[0];
-            td= mdate
+            
+            td= thread.mdate
 
   br
 
