--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -59,7 +59,7 @@ block content
   br
 
   -n = 0
-  -id = 0
+  -id = '/'
   if title == 'Schemes'
     -id = '/cat=Schemes&'
   if title == 'Party'
@@ -71,7 +71,7 @@ block content
   nav
     while n < Pnum
       -x = n + 1
-      -id = id + '/page=' + n
+      -id = id + 'page=' + n
       if n == page - 1
         li
           p= page
