Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,25 +3,25 @@ extends layout
 block content
   .menu
     a(href='/cat=Schemes&page=0')
-      if title == 'Schemes'
+      if title == 'SCHEMES'
         button.menuBtn.currentSub(type='submit') Schemes
       else
 
         button.menuBtn(type='submit') Schemes
     a(href='/cat=Party&page=0')
-      if title == 'Party'
+      if title == 'PARTY'
         button.menuBtn.currentSub(type='submit') Party
       else
 
         button.menuBtn(type='submit') Party
     a(href='/cat=Tech&page=0')
-      if title == 'Tech'
+      if title == 'TECH'
         button.menuBtn.currentSub(type='submit') Tech
       else
 
         button.menuBtn(type='submit') Tech
     a(href='/cat=Videogames&page=0')
-      if title == 'Videogames'
+      if title == 'VIDEOGAMES'
         button.menuBtn.currentSub(type='submit') Video games
       else
 
