--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,37 +2,36 @@ extends layout
 
 block content
   .menu
-    a(href='/cat=Schemes&page=0')
-      if title == 'SCHEMES'
-        button.menuBtn.currentSub(type='submit') Schemes
-      else
+    .nav
+      a(href='/cat=Schemes&page=0')
+        if title == 'SCHEMES'
+          button.menuBtn.currentSub(type='submit') Schemes
+        else
 
-        button.menuBtn(type='submit') Schemes
-    a(href='/cat=Party&page=0')
-      if title == 'PARTY'
-        button.menuBtn.currentSub(type='submit') Party
-      else
+          button.menuBtn(type='submit') Schemes
+      a(href='/cat=Party&page=0')
+        if title == 'PARTY'
+          button.menuBtn.currentSub(type='submit') Party
+        else
 
-        button.menuBtn(type='submit') Party
-    a(href='/cat=Tech&page=0')
-      if title == 'TECH'
-        button.menuBtn.currentSub(type='submit') Tech
-      else
+          button.menuBtn(type='submit') Party
+      a(href='/cat=Tech&page=0')
+        if title == 'TECH'
+          button.menuBtn.currentSub(type='submit') Tech
+        else
 
-        button.menuBtn(type='submit') Tech
-    a(href='/cat=Videogames&page=0')
-      if title == 'VIDEOGAMES'
-        button.menuBtn.currentSub(type='submit') Video games
-      else
+          button.menuBtn(type='submit') Tech
+      a(href='/cat=Videogames&page=0')
+        if title == 'VIDEOGAMES'
+          button.menuBtn.currentSub(type='submit') Video games
+        else
 
-        button.menuBtn(type='submit') Video games
-
-  .menuFill
-
-  .newThreadDiv
-    -blah = '/newThread&'+title
-    a(href=blah)
-      button.menuBtn.newThread(type='submit') New Thread
+          button.menuBtn(type='submit') Video games
+    .fill
+    .newThreadDiv
+      -blah = '/newThread&'+title
+      a(href=blah)
+        button.menuBtn.newThread(type='submit') New Thread
 
   .table
     br
