--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -95,8 +95,8 @@ a{
 
 .fill {
   background: rgb(250, 180, 135);
-  /*margin-left: 40em;*/
-  width: 100%;
+  margin-left: 5em;
+  margin-right: 5em;
   height: 5.0625em;
 }
 
