--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -58,18 +58,22 @@ block content
   br
 
   .search
-    form(method='post' action='/search=')
-      select.select(name='type')
-        option(value='name' selected) Name
-        option(value='title') Title
-        option(value='paragraph') paragraph
-        option(value='all') all
+    form(method = 'post' action = '/search=')
+      select.select(name = 'type')
+        option(value = 'name' selected) Name
+        option(value = 'title') Title
+        option(value = 'paragraph') paragraph
+        option(value = 'all') all
       input(
-        type='text'
-        name='search'
-        pattern='.{2,64}'
-        required title='must be 2-64 characters'
+        type = 'text'
+        name = 'search'
+        pattern = '.{2,64}'
+        required title = 'must be 2-64 characters'
       )
+      input(
+        type = 'submit'
+        style = 'visibility: hidden;'
+        )
 
 
 
