Updated through rs script

--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -4,6 +4,6 @@ block content
   h1= searched
   hr
   each result in results
-    p= result.name ' ' + result.date
+    p= result.name + ' ' + result.date
     p= result.title
     p= result.paragraph
