Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,25 +4,25 @@ block content
   .menu
     .nav
       a(href='/cat=Schemes&page=0')
-        if title == 'SCHEMES'
+        if title == 'Schemes'
           button.menuBtn.currentSub(type='submit') Schemes
         else
 
           button.menuBtn(type='submit') Schemes
       a(href='/cat=Party&page=0')
-        if title == 'PARTY'
+        if title == 'Party'
           button.menuBtn.currentSub(type='submit') Party
         else
 
           button.menuBtn(type='submit') Party
       a(href='/cat=Tech&page=0')
-        if title == 'TECH'
+        if title == 'Tech'
           button.menuBtn.currentSub(type='submit') Tech
         else
 
           button.menuBtn(type='submit') Tech
       a(href='/cat=Videogames&page=0')
-        if title == 'VIDEOGAMES'
+        if title == 'Videogames'
           button.menuBtn.currentSub(type='submit') Video games
         else
 
