--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -96,7 +96,10 @@ a{
 }
 
 .fill {
-  background: rgb(250, 180, 135);
+  background: rgb(250,180,135); /* Old browsers */
+  background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 100%);
+  background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 100%);
+  background: linear-gradient(to right, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 100%);
   margin-left: 5em;
   margin-right: 5em;
   height: 5.0625em;
