--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -7,4 +7,18 @@ block content
     p= result.name + ' ' + result.date
     p= result.title
     p= result.paragraph
-    hr
+  hr
+  nav
+    while n < Pnum
+      -x = n + 1
+      -id = '/threadid=' + JSON.stringify(thread.id)
+      -id = id + '&page=' + n
+      if n == page
+        li
+          p= page + 1
+      else
+
+        li
+          a(href=(id))= x
+      -n = n + 1
+  br
