Updated through rs script

--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -7,7 +7,11 @@ block content
     p= result.name + ' ' + result.date
     p= result.title
     p= result.paragraph
-  hr
+    hr
+
+  p= page
+  p= Pnum
+  
   nav
     while n < Pnum
       -x = n + 1
