Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -19,6 +19,8 @@ block content
   -id = '/threadid=' + JSON.stringify(thread.id)
   -id = id + '&page=' + page
 
+
+block content2
   h3 Leave a comment below
   form(method='post' action=id)
     div
