--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -10,22 +10,22 @@ html(lang='is')
     main
       block content
 
-      if page != null
-        br
-        -n = 0
-        nav
-          while n < Pnum
-            -x = n + 1
-            -id = '/threadid=' + JSON.stringify(thread.id)
-            -id = id + '&page=' + n
-            if n == page
-              li
-                p= page + 1
-            else
-
-              li
-                a(href=(id))= x
-            -n = n + 1
-        br
+      //- if page != null
+      //-   br
+      //-   -n = 0
+      //-   nav
+      //-     while n < Pnum
+      //-       -x = n + 1
+      //-       -id = '/threadid=' + JSON.stringify(thread.id)
+      //-       -id = id + '&page=' + n
+      //-       if n == page
+      //-         li
+      //-           p= page + 1
+      //-       else
+      //-
+      //-         li
+      //-           a(href=(id))= x
+      //-       -n = n + 1
+      //-   br
 
       block content2
