--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -91,9 +91,11 @@ a{
   display: flex;
 }
 
+
 .newThread {
   background: rgb(244, 139, 194);
 }
+
 
 .fill {
   background: rgb(250,180,135); /* Old browsers */
@@ -103,6 +105,13 @@ a{
   margin-left: 5em;
   margin-right: 5em;
   height: 5.0625em;
+}
+
+.newThreadDiv:hover + .fill {
+  background: rgb(250,180,135); /* Old browsers */
+  background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
+  background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
+  background: linear-gradient(to right, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
 }
 
 button {
