--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,4 +1,4 @@
-extends layout
+extends pages
 
 block content
   .menu
@@ -85,27 +85,3 @@ block content
     -id1 = '/cat=Tech&'
   if title == 'Videogames'
     -id1 = '/cat=Videogames&'
-
-  //- if page < 5
-  //-   -n = 0
-  //-   -max = page + 2
-  //- else if page < Pnum - 4
-  //-   -n = page - 3
-  //-   -max = Pnum
-  //- else
-  //-
-  //-   -n = page - 2
-  -n = 0
-  nav
-    while n < Pnum
-      -x = n + 1
-      -id = id1 + 'page=' + n
-      if n == page
-        li
-          p= n + 1
-      else
-
-        li
-          a(href=(id))= x
-      -n = n + 1
-  br
