--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -105,6 +105,10 @@ a{
   margin-left: 5em;
   margin-right: 5em;
   height: 5.0625em;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
 }
 
 .newThreadDiv:hover + .fill {
