--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -105,13 +105,13 @@ a{
   margin-left: 5em;
   margin-right: 5em;
   height: 5.0625em;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: all;
+  transition-property: all;
 }
 
 .newThreadDiv:hover + .fill {
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: background-color;
-  transition-property: background-color;
   background: rgb(250,180,135); /* Old browsers */
   background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
   background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
