--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -94,6 +94,8 @@ a{
 
 .newThread {
   background: rgb(244, 139, 194);
+  -webkit-transition-property: border-radius;
+  transition-property: border-radius;
 }
 
 
@@ -105,10 +107,6 @@ a{
   margin-left: 5em;
   margin-right: 5em;
   height: 5.0625em;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: all;
-  transition-property: all;
 }
 
 .newThreadDiv:hover + .fill {
