--- a/src/views/pages.pug
+++ b/src/views/pages.pug
@@ -9,8 +9,7 @@ block content2
     nav
       while n < Pnum
         -x = n + 1
-        -id = '/threadid=' + JSON.stringify(thread.id)
-        -id = id + '&page=' + n
+        -id = info + 'page=' + n
         if n == page
           li
             p= page + 1
