Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -52,7 +52,7 @@ block content
               a(href=id)= thread.title
             td= thread.comnum
             td= thread.views
-            td= date
+            td= thread.date
 
   br
 
