Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,7 +53,7 @@ block content
             td= thread.comnum
             td= thread.views
             -date = JSON.stringify(thread.mdate)
-            -date = date.substr(0,20) + date.substr(24,27)
+            //- -date = date.substr(0,20) + date.substr(24,27)
             td= date
 
   br
