--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,7 +53,8 @@ block content
             td= thread.comnum
             td= thread.views
             -date = '' + thread.mdate
-            -date = date.substr(0,21) + date.substr(24,27)
+            -date = date.substr(0,21)
+            -date = date.slice(0,-11)
             td= date
 
   br
