--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -53,7 +53,7 @@ block content
             td= thread.comnum
             td= thread.views
             -date = '' + thread.mdate
-            -date = date.substr(0,21)
+            -date = date.slice(0,-21)
             td= date
 
   br
