Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,7 +57,8 @@ block content
             td= date
 
   br
-
+  label(for='toggle-1') test
+  input(type='checkbox', id='toggle-1')
   .search
     form(method = 'post' action = '/search=')
       select.select(name = 'type')
