--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,7 +57,7 @@ block content
             td= date
 
   br
-  label(for='toggle-1') test
+  label(for='toggle-1')
   input(type='checkbox', id='toggle-1')
   .search
     form(method = 'post' action = '/search=')
