Updated through rs script

--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -7,7 +7,7 @@ input[type=checkbox] {
 }
 label {
   -webkit-appearance: push-button;
-  background: transparent url(/images/search.png);
+  background: transparent url(/images/search.png) fixed 65% 150%;
   -moz-appearance: button;
   display: inline-block;
   padding: 100px;
