--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -6,12 +6,12 @@ input[type=checkbox] {
    left: -9999px;
 }
 label {
-  -webkit-appearance: push-button;
+  /*-webkit-appearance: push-button;*/
   background: transparent url(/images/search.png) fixed 65% 150%;
-  -moz-appearance: button;
+  /*-moz-appearance: button;*/
   display: inline-block;
-  padding: 100px;
-  margin: 60px 0 10px 0;
+  padding: 0;
+  margin: 0;
   cursor: pointer;
 }
 
