--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,8 +57,9 @@ block content
             td= date
 
   br
-  label(for='toggle-1')
-  input(type='checkbox', id='toggle-1')
+  .image
+    label(for='toggle-1')
+    input(type='checkbox', id='toggle-1')
   .search
     form(method = 'post' action = '/search=')
       select.select(name = 'type')
