--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -59,6 +59,7 @@ block content
   br
   .image
     label(for='toggle-1')
+    img.im(src='/images/search.png', width='60' height='60' id='toggle-1')
     input(type='checkbox', id='toggle-1')
   .search
     form(method = 'post' action = '/search=')
