--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -57,27 +57,28 @@ block content
             td= date
 
   br
-  .image
-    label(for='toggle-1')
-    img.im(src='/images/search.png', width='60' height='60' id='toggle-1')
-    input(type='checkbox', id='toggle-1')
-  .search
-    form(method = 'post' action = '/search=')
-      select.select(name = 'type')
-        option(value = 'name' selected) Name
-        option(value = 'title') Title
-        option(value = 'paragraph') paragraph
-        option(value = 'all') all
-      input(
-        type = 'text'
-        name = 'search'
-        pattern = '.{2,64}'
-        required title = 'must be 2-64 characters'
-      )
-      input(
-        type = 'submit'
-        style = 'visibility: hidden;'
+  .inline
+    .image
+      //- img.im(src='/images/search.png', width='60', height='60')
+      label(for='toggle-1')
+      input(type='checkbox', id='toggle-1')
+    .search
+      form(method = 'post' action = '/search=')
+        select.select(name = 'type')
+          option(value = 'name' selected) Name
+          option(value = 'title') Title
+          option(value = 'paragraph') paragraph
+          option(value = 'all') all
+        input(
+          type = 'text'
+          name = 'search'
+          pattern = '.{2,64}'
+          required title = 'must be 2-64 characters'
         )
+        input(
+          type = 'submit'
+          style = 'visibility: hidden;'
+          )
 
 
 
