Updated through rs script

--- a/src/views/pages.pug
+++ b/src/views/pages.pug
@@ -22,7 +22,7 @@ block content2
           -n = page-2
           li
             p &middot &middot &middot
-        else if n == page+2 && n < Pnum-1
+        else if n == page+2 && n < Pnum
           -n = Pnum-1
           li
             p &middot &middot &middot
