Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,7 +3,7 @@ html(lang='is')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/style0.css')
+    //- link(rel='stylesheet', href='/stylesheets/style0.css')
   body
     header
       a(href='/')
