--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -41,6 +41,13 @@ main {
   padding: 0 50px;
 }
 
+.menu {
+  background: rgb(250,180,135); /* Old browsers */
+  background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
+  background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
+  background: linear-gradient(to right, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
+}
+
 .nav {
   display: flex;
   float:left;
@@ -97,18 +104,7 @@ a{
   transition-property: border-radius;
 }
 
-
-.fill {
-  background: rgb(250,180,135); /* Old browsers */
-  background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
-  background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
-  background: linear-gradient(to right, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
-  margin-left: 5em;
-  margin-right: 5em;
-  height: 5.0624em;
-}
-
-.newThreadDiv:hover + .fill {
+.newThreadDiv:hover + .menu {
   background: rgb(250,180,135); /* Old browsers */
   background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
   background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
