--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -43,9 +43,9 @@ main {
 
 .menu {
   background: rgb(250,180,135); /* Old browsers */
-  background: -webkit-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
-  background: -o-linear-gradient(left, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
-  background: linear-gradient(to right, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%);
+  background: -webkit-linear-gradient(left, rgba(250,180,135,0) 0%, rgba(250,180,135,1) 2.5em, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%, rgba(244,139,194,0) 100%);
+  background: -o-linear-gradient(left, rgba(250,180,135,0) 0%, rgba(250,180,135,1) 2.5em, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%, rgba(244,139,194,0) 100%);
+  background: linear-gradient(to right, rgba(250,180,135,0) 0%, rgba(250,180,135,1) 2.5em, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%, rgba(244,139,194,0) 100%);
 }
 
 .nav {
