--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -46,6 +46,7 @@ main {
   background: -webkit-linear-gradient(left, rgba(250,180,135,0) 0%, rgba(250,180,135,1) 2.5em, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%, rgba(244,139,194,0) 100%);
   background: -o-linear-gradient(left, rgba(250,180,135,0) 0%, rgba(250,180,135,1) 2.5em, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%, rgba(244,139,194,0) 100%);
   background: linear-gradient(to right, rgba(250,180,135,0) 0%, rgba(250,180,135,1) 2.5em, rgba(250,180,135,1) 80%, rgba(244,139,194,1) 85%, rgba(244,139,194,0) 100%);
+  padding-bottom: 0.85em;
 }
 
 .nav {
