Updated through rs script

--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -24,6 +24,6 @@ label {
   display: inline-block
 }
 
-input[type=checkbox]:checked ~ .search{
+input[type=checkbox]:not(:checked) ~ .search{
   display: none;
 }
