Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -50,7 +50,7 @@ block content
               pattern = '.{2,64}'
               required title = 'must be 2-64 characters'
               )
-            input(
+            input.searchbar(
               type = 'submit'
               style = 'visibility: hidden;'
               )
