--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -128,6 +128,13 @@ a{
   background: linear-gradient(to right, rgba(250,180,135,1) 0%, rgba(250,180,135,1) 80%, rgb(71, 198, 237) 85%);
 }
 
+.seachbar {
+  border: none;
+  background: rgb(255,255,255); /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 46%, rgba(250,180,135,1) 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 46%, rgba(250,180,135,1) 100%);
+  background: radial-gradient(ellipse at center, rgba(255,255,255,1) 46%,rgba(250,180,135,1) 100%);
+
 button {
   padding: 0px;
 }
