--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -1,6 +1,7 @@
 input[type=checkbox] {
   position: absolute;
   left: -9999px;
+
 }
 
 label {
@@ -30,8 +31,13 @@ label {
   margin-top: 30px;
   vertical-align: middle;
   float: left;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: visibility, opacity;
+  transition-property: visibility, opacity;
 }
 
 input[type=checkbox]:not(:checked) ~ .search{
-  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
