--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -134,6 +134,7 @@ a{
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 46%, rgba(250,180,135,1) 100%);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 46%, rgba(250,180,135,1) 100%);
   background: radial-gradient(ellipse at center, rgba(255,255,255,1) 46%,rgba(250,180,135,1) 100%);
+}
 
 button {
   padding: 0px;
