--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -29,15 +29,17 @@ label {
   height: 21px;
   width: 275px;
   margin-top: 30px;
+  margin-right: 12px;
   vertical-align: middle;
   float: left;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: visibility, opacity;
-  transition-property: visibility, opacity;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4  s;
+  -webkit-transition-property: visibility, opacity, margin-right;
+  transition-property: visibility, opacity, margin-right;
 }
 
 input[type=checkbox]:not(:checked) ~ .search{
   visibility: hidden;
   opacity: 0;
+  margin-right: 0px;
 }
