--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -121,7 +121,15 @@ a{
   transition-property: border-radius;
 }
 
-.newThreadDiv:hover + .menu {
+.menuFade {
+  position: absolute;
+  right: 50px;
+  top: 300px;
+  height: 50px;
+  width: 50px;
+}
+
+.menuFade:hover + .menu {
   background: rgb(250,180,135); /* Old browsers */
   background: -webkit-linear-gradient(left,
     rgba(250,180,135,0) 0%,
