--- a/src/views/pages.pug
+++ b/src/views/pages.pug
@@ -6,7 +6,7 @@ block content2
   if page != null
     br
     -n = 0
-    nav.pages
+    .pages
       while n < Pnum
         -id = info + 'page=' + n
         if n == page
