--- a/src/views/pages.pug
+++ b/src/views/pages.pug
@@ -10,11 +10,11 @@ block content2
       while n < Pnum
         -id = info + 'page=' + n
         if n == page
-          p= n+1
+          p.selected= n+1
         else
 
           a(href=(id))
-            button(type='submit')= n+1
+            button.pageBtn(type='submit')= n+1
         if n == 0 && page > 3
           -n = page-2
           p &middot &middot &middot
