--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -180,7 +180,7 @@ ul {
 }
 
 .pages {
-  display: inline;
+  margin: auto;
   background: rgb(117, 201, 165);
 }
 
@@ -197,6 +197,7 @@ li a {
 }
 
 p.selected {
+  display: inline;
   padding: 3px;
   background: rgb(75, 128, 105);
 }
