--- a/src/views/pages.pug
+++ b/src/views/pages.pug
@@ -6,24 +6,25 @@ block content2
   if page != null
     br
     -n = 0
-    .pages
-      while n < Pnum
-        -id = info + 'page=' + n
-        if n == page
-          p.selected= n+1
-        else
+    .center
+      .pages
+        while n < Pnum
+          -id = info + 'page=' + n
+          if n == page
+            p.selected= n+1
+          else
 
-          a(href=(id))
-            button.pageBtn(type='submit')= n+1
-        if n == 0 && page > 3
-          -n = page-2
-          p &middot &middot &middot
-        else if n == page+2 && n < Pnum-2
-          -n = Pnum-1
-          p &middot &middot &middot
-        else
+            a(href=(id))
+              button.pageBtn(type='submit')= n+1
+          if n == 0 && page > 3
+            -n = page-2
+            p &middot &middot &middot
+          else if n == page+2 && n < Pnum-2
+            -n = Pnum-1
+            p &middot &middot &middot
+          else
 
-          - n++
+            - n++
 
     br
 block content3
