--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -191,8 +191,9 @@ ul {
 
 .pageBtn {
   background: rgba(250,180,135,1);
-  height: 10px;
-  width: 10px;
+  height: 30px;
+  width: 20px;
+  font-size: 16px;
   -webkit-transition-property: background-color, border-radius;
   transition-property: background-color, border-radius;
 }
