--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -205,11 +205,13 @@ ul {
 
 p.selected, p.dot {
   display: inline;
-  padding: 3px;
+  height: 30px;
 }
 
 p.selected {
   background: rgb(40, 199, 141);
+  font-size: 16px;
+  width: 20px;
 }
 
 p.dot {
