--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -194,6 +194,8 @@ ul {
   height: 30px;
   width: 20px;
   font-size: 16px;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
   -webkit-transition-property: background-color, border-radius;
   transition-property: background-color, border-radius;
 }
