Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -71,7 +71,7 @@ block content
             form(method='get' action='/sort=title&page=0')
               button(type='submit') Title
           th
-            form(method='get' action='/sort=numcom&page=0')
+            form(method='get' action='/sort=comnum&page=0')
               button(type='submit') Comments
           th
             form(method='get' action='/sort=views&page=0')
