--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -159,10 +159,10 @@ a{
 }
 
 .searchbar {
-  background: rgb(255,255,255); /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, rgb(255,255,255) 46%, rgba(250,180,135,0) 100%);
-  background: -webkit-radial-gradient(center, ellipse cover, rgb(255,255,255) 46%, rgba(250,180,135,0) 100%);
-  background: radial-gradient(ellipse at center, rgb(255,255,255) 46%, rgba(250,180,135,0) 100%);
+  background: rgba(251,238,152,1); /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, rgba(251,238,152,1) 46%, rgba(250,180,135,0) 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(251,238,152,1) 46%, rgba(250,180,135,0) 100%);
+  background: radial-gradient(ellipse at center, rgba(251,238,152,1) 46%, rgba(250,180,135,0) 100%);
 }
 
 button {
