Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -9,6 +9,7 @@ html(lang='is')
       a(href='/')
         h1.pageheader Forum
     main
+      block menu
       block content
-      block content2
-      block content3
+      block pagenumbers
+      block comment
