--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -1,4 +1,4 @@
-extends layout
+extends menu
 
 block content
   h1 New Thread
@@ -41,7 +41,7 @@ block content
         if (sel==2)
           option(value='Party' selected) Party
         else
-          
+
           option(value='Party') Party
         if (sel==3)
           option(value='Tech' selected) Tech
