--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -20,7 +20,7 @@ block content
   -id = id + '&page=' + page
 
 
-block content3
+block comment
   h3 Leave a comment below
   form(method='post' action=id)
     div
