--- a/src/views/pages.pug
+++ b/src/views/pages.pug
@@ -1,8 +1,10 @@
-extends layout
+extends menu
 
 block content
 
-block content2
+
+
+block pagenumbers
   if page != null && Pnum > 1
     br
     -n = 0
@@ -27,4 +29,4 @@ block content2
             - n++
 
     br
-block content3
+block comment
