Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -168,6 +168,7 @@ a{
   background: -moz-radial-gradient(center, ellipse cover, rgba(251,238,152,1) 20%, rgba(250,180,135,0) 100%);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(251,238,152,1) 20%, rgba(250,180,135,0) 100%);
   background: radial-gradient(ellipse at center, rgba(251,238,152,1) 20%, rgba(250,180,135,0) 100%);
+  border: inset 2px rgba(250,180,135,1);
 }
 
 button {
