Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -164,10 +164,7 @@ a{
 }
 
 .searchbar {
-  background: rgba(251,238,152,1); /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, rgba(251,238,152,1) 20%, rgba(250,180,135,0) 100%);
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(251,238,152,1) 20%, rgba(250,180,135,0) 100%);
-  background: radial-gradient(ellipse at center, rgba(251,238,152,1) 20%, rgba(250,180,135,0) 100%);
+  background: rgba(251,238,152,1);
   border: inset 2px rgba(250,180,135,1);
 }
 
