Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -24,7 +24,7 @@ block comment
   h3 Leave a comment below
   form(method='post' action=id)
     div
-      input(
+      input.post(
         type='text'
         name='name'
         placeholder='Username'
@@ -32,7 +32,7 @@ block comment
         required title='must be 2-64 characters'
       )
     div
-      textarea(
+      textarea.post(
         lang='is'
         type='text'
         name='paragraph'
