--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -164,9 +164,14 @@ a{
     rgba(244,139,194,0) 98%);
 }
 
-input {
+.searchbar {
   background: rgba(251,238,152,1);
   border: inset 2px rgba(250,180,135,1);
+}
+
+.post {
+  background: rgba(254, 247, 206,1);
+  border: inset 2px rgba(251,238,152,1);
 }
 
 button {
