--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -5,7 +5,7 @@ block content
 
   form(method='post' action='/newthread')
     div
-      input(
+      input.post(
         type='text'
         name='name'
         placeholder='Username'
@@ -13,7 +13,7 @@ block content
         required title='must be 2-64 characters'
       )
     div
-      input(
+      input.post(
         type='text'
         name='title'
         placeholder='Title'
@@ -21,7 +21,7 @@ block content
         required title='must be 2-100 characters'
       )
     div
-      textarea(
+      textarea.post(
         lang='is'
         type='text'
         name='paragraph'
